# timesfm-forecasting-studio

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  TimesFM_Masterclass.pptx  app.py  generate_slides.py  index.html  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
docs/: manual-datasets.md
docs/tutorial/: 01_timesfm_intro.md  02_local_installation.md  03_data_engineering.md  04_forecasting_mastery.md
graphify-out/: .graphify_health.json  .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: download_manual_datasets.py
src/: integrations.py  loader.py  predictor.py
src/timesfm_app/: __init__.py  analysis.py  config.py  contracts.py  evaluation.py  manual_datasets.py  reports.py
src/timesfm_app/forecasting/: __init__.py  preprocessing.py  runtime.py
src/timesfm_app/ui/: __init__.py  (+13 more)
tests/: conftest.py
tests/integration/: test_streamlit_app.py
tests/unit/: test_analysis.py  test_batch_workflow.py  test_config.py  test_covariates.py  test_evaluation.py  test_forecasting.py  test_ingestion.py  test_integrations_facade.py  test_loader_facade.py  test_manual_datasets.py  test_predictor_facade.py  test_preprocessing.py  test_provider_resolvers.py  test_reports.py  test_ui_state.py
(+4 files in other folders)
