[project]
name = "timesfm-forecasting-app"
version = "0.1.0"
description = "Local-first Streamlit forecasting with Google TimesFM 2.5"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14,<3.15"
dependencies = [
  "httpx==0.28.1",
  "huggingface-hub==1.24.0",
  "kaggle==2.2.3",
  "kagglehub==1.0.2",
  "numpy==2.5.1",
  "openpyxl==3.1.5",
  "pandas==3.0.3",
  "plotly==6.9.0",
  "pyarrow==24.0.0",
  "streamlit==1.59.2",
  "timesfm[torch]==2.0.2",
  "torch==2.13.0",
]

[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
  "src/timesfm_app",
  "src/loader.py",
  "src/integrations.py",
  "src/predictor.py",
]
sources = ["src"]

[dependency-groups]
dev = [
  "pytest==9.0.3",
  "ruff==0.15.22",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
